
* `tex2html` has been added for a conveinent way to convert a .tex file to .html.

* `rdirs` reclusively creates multiple directories.

* The sync family of functions has been introduced.  These functions provide 
  quick syncing between directories.  See `?sync` for more details.

* `HR` a function for quick html hyperrefs.

* spacing functions `HS` (horizontal space) and `VS` (vertical space) have been 
  added.

* `SC` a function to quickly generate special HTML characters.

MINOR FEATURES

* `notes` is a function that allows the user to view a truncated version of the 
  notes located in the ARTICLES directory.

* A new template `wordpress_web` has been added.

IMPROVEMENTS

* `GQ`, `CA`, `LL` and `US` parse out both "fi" and "fl" ligatures more 
  effectively, whereas previously "fi" was assumed if a ligature was detected. 


CHANGES

* `html5` and `reveal.js` are nor Deprecated.  The birth of the slidify package 
  makes maintaining these functions pointless.  These functions will be removed 
  from the reports package upon the next update.

reports 0.1.2
----------------------------------------------------------------
This is a bug fix release

BUG FIXES

* `GQ` did not handle block quotes correctly in what printed to the console.  
  This behavior has been corrected.

* `GQ`, `CA`, `LL` and `US` now parse out ligature "fi" as "fi" rather than "?".  
  Warnings were added for cases when liigatures are detected.

* Fixed the Description file for the basic_web template (missing info).

* `reveal.js` resulted in an error if a reference page was not supplied.   This 
  behavior has been corrected.

CHANGES

* `install_pandoc` is no longer exported as this functionality can be found in 
  the installr package


reports 0.1.1
----------------------------------------------------------------

* The first CRAN installation of the reports package

* Package designed to provide efficient work flow in writing and presenting 
  academic articles and other reports